# cmake_ide_generator

./: CMakeLists.txt  LICENSE  amazon-freertos.md  board-mcu-hack.c  board-mcu-hack.h  ccs-parse-reply.c  ccs-test-cproject.c  ccs-test-project.c  cdt_xml_compare.c  e2studio-parse-reply.c  ide_generator.nsi  json_eclipse_cdt.c  json_eclipse_cdt.h  mdk-startup.c  nxp-parse-reply.c  query-cmake.c  readme.md  stm32cubeide-parse-reply.c  stm32cubeide-test-cproject.c  stm32cubeide-test-project.c  sw4stm32-parse-reply.c  sw4stm32-test-cproject.c  sw4stm32-test-project.c  translate_board_mcu.json  uvision-parse-reply.c  uvision.h  xml.c  xml.h
